# render

./: .editorconfig  .gitmodules  Animation.cpp  Animation.hpp  CMakeLists.txt  Item.cpp  Item.hpp  loc.ps1  main.cpp  opengl.cpp  opengl.hpp  opengl_utils.cpp  opengl_utils.hpp  ui.cpp  utils.cmake
Examples/: CMakeLists.txt
Examples/Common/: CMakeLists.txt  rtx_scene_default.cpp  rtx_scene_default.hpp
Examples/OpenGL_Cube/: CMakeLists.txt  common.hpp  fragment_shader.frag  main.cpp  ui-imgui.hpp  ui-nuk.hpp  vertex_shader.vert
Examples/OpenGL_FB_Instanced/: CMakeLists.txt  main.cpp  map.hpp  pos3_uv2_mod4.vert  samp_2D_array.frag
Examples/OpenGL_Framebuffer/: CMakeLists.txt  framebuffer_draw_array.cpp  framebuffer_imgui.cpp  framebuffer_raw.cpp
Examples/OpenGL_Framebuffer/Shaders/: vec2uv.frag  vec3pos_MVP.vert  vec3pos_vec2uv.vert  vec3pos_vec2uv_MVP.vert
Examples/OpenGL_Grid/: CMakeLists.txt  gpt_grid.frag  gpt_pos3.vert  grid.frag  grid_pos3.vert  infinite_grid_decls.hpp  infinite_grid_main.cpp
Examples/OpenGL_InstanceDrawing/: CMakeLists.txt  main_array_draw.cpp  main_elements_draw.cpp  main_mat4_f_animated_draw.cpp  main_mat4_f_draw.cpp  samp_2D_array.frag  vec2tex_samp2D.frag  vec3_vec2_mat4_f.vert  vec3pos_vec2tex_mat4mod.vert
Examples/OpenGL_InstanceDrawing_Raw/: CMakeLists.txt  main.cpp  main_elements.cpp  vec3pos_vec2tex_mat4mod.vert
Examples/OpenGL_ItemAnimation/: CMakeLists.txt  Item.cpp  Item.hpp  fragment_shader.frag  main.cpp  vertex_shader.vert
Examples/OpenGL_Life/: CMakeLists.txt  fragment_shader.frag  kernel.cuh  main.cpp  vertex_shader.vert
Examples/OpenGL_MultiTextures/: CMakeLists.txt  main.cpp  pos3_uv2.vert  samp2d.frag
Examples/OpenGL_MultipleTriangle/: CMakeLists.txt  main.cpp
Examples/OpenGL_OrthoCamTexture/: CMakeLists.txt  main.cpp
Examples/OpenGL_SpriteAnimation/: CMakeLists.txt  fragment_shader.frag  main.cpp  main_2.cpp  vertex_shader.vert
Examples/OpenGL_Texture_2/: CMakeLists.txt  main.cpp  shader_s.h
Examples/OpenGL_Textures/: CMakeLists.txt  fragment_shader.frag  main.cpp  vertex_shader.vert
Examples/OpenGL_World/: CMakeLists.txt  application.hpp  fragment_shader.frag  ground_builder.cpp  ground_builder.hpp  io.cpp  io.hpp  item.cpp  item.hpp  main.cpp  map_1.wrld  map_reader.cpp  map_reader.hpp  selection.vert  ui-imgui.cpp  ui-imgui.hpp
Examples/OpenGl_SingleTriangle/: CMakeLists.txt  main.cpp
Examples/RTX_Camera_movable/: CMakeLists.txt  main.cpp
Examples/RTX_Mesh/: CMakeLists.txt  main.cpp
Examples/RTX_Mesh/stone/: stone_1.mtl  stone_2.mtl  stone_4.mtl  stone_5.mtl  stone_6.mtl
Examples/RTX_Multithread/: CMakeLists.txt  main.cpp  scene.hpp
Examples/RTX_Simple/: CMakeLists.txt  main.cpp  rtx.hpp
Examples/RTX_Simple_2/: CMakeLists.txt  main.cpp  scene.hpp
Loader/: CMakeLists.txt  loader.cpp  loader.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  mtl_parser.cpp  mtl_parser.hpp  opengl_converter.cpp  opengl_converter.hpp  parser.cpp  parser.hpp  scene.hpp  tloader.cpp  tloader.hpp  visitor.hpp
Loader-Test/: CMakeLists.txt  mtl_parser_test.cpp  mtl_printer.cpp  mtl_printer.hpp  opengl_test.cpp  tloader_test.cpp
Loader-Test/mesh-examples/: stone_3.mtl
OpenGL/: CMakeLists.txt  Imagedata.cpp  OpenGL.hpp  _camera.cpp  _camera.hpp  buffer_bind_guard.cpp  camera.cpp  camera.hpp  comands.hpp  image_data.cpp  image_data.hpp  image_loader.cpp  image_loader.hpp  image_manager.hpp  item.cpp  item.hpp  light.cpp  light.hpp  model.hpp  opengl.cpp  opengl.hpp  opengl_context.cpp  opengl_context.hpp  opengl_framebuffer_data.cpp  opengl_framebuffer_data.hpp  opengl_functions.cpp  opengl_functions.hpp  opengl_instanced_render_data.cpp  opengl_instanced_render_data.hpp  opengl_proc.cpp  opengl_proc.hpp  opengl_render_data.cpp  opengl_render_data.hpp  opengl_utils.cpp  opengl_utils.hpp  opengl_vertex_input.cpp  opengl_vertex_input.hpp  opengl_vertex_instance_input.cpp  operable.hpp  operators.cpp  (+5 more)
OpenGL-Test/: CMakeLists.txt  function_provider_mock.hpp  texture_test.cpp
RTX/: CMakeLists.txt  camera.cpp  camera.hpp  model.cpp  model.hpp  render.cpp  render.hpp  rtx.cpp  rtx.hpp  rtx_internal.cpp  rtx_internal.hpp  scene.hpp  utils.hpp
RTX-Test/: CMakeLists.txt  test_camera.cpp  test_mesh_loader.cpp  test_object_intersections.cpp  test_render.cpp
Render/: Animation.cpp  Animation.hpp  CMakeLists.txt
Render-Test/: CMakeLists.txt  test_animation.cpp
STB-Image/: CMakeLists.txt  image.hpp
UI/: CMakeLists.txt  application.cpp  application.hpp  imgui_widget_render.cpp  imgui_widget_render.hpp  io.cpp  io.hpp  observer.cpp  observer.hpp  property.hpp  ui.cpp  ui.hpp  widgets.cpp  widgets.hpp
UI-Nuklear/: CMakeLists.txt  base_application.cpp  base_application.hpp  nuklear_application.cpp  nuklear_application.hpp  nuklear_widgets.cpp  nuklear_widgets.hpp  opengl_application.cpp  opengl_application.hpp  rtx_application.cpp  rtx_application.hpp
