cmake_minimum_required(VERSION 3.20)

add_subdirectory(Common)
include_directories("${CMAKE_CURRENT_SOURCE_DIR}")

add_subdirectory(OpenGL_SingleTriangle)
add_subdirectory(OpenGL_MultipleTriangle)
add_subdirectory(OpenGL_Cube)
add_subdirectory(OpenGL_Textures)
add_subdirectory(OpenGL_Texture_2)
#add_subdirectory(OpenGL_Life)
add_subdirectory(OpenGL_SpriteAnimation)
add_subdirectory(OpenGL_ItemAnimation)
add_subdirectory(OpenGL_World)
add_subdirectory(OpenGL_OrthoCamTexture)
add_subdirectory(OpenGL_Grid)

add_subdirectory(RTX_Simple)
add_subdirectory(RTX_Simple_2)
add_subdirectory(RTX_Multithread)
add_subdirectory(RTX_Camera_Movable)
add_subdirectory(RTX_Mesh)
