cmake_minimum_required(VERSION 3.20)

#add_subdirectory(Common)
include_directories("${CMAKE_CURRENT_SOURCE_DIR}")

add_subdirectory(OpenGL_SingleTriangle)
add_subdirectory(OpenGL_MultipleTriangle)
add_subdirectory(OpenGL_SpriteAnimation)
add_subdirectory(OpenGL_OrthoCamTexture)
add_subdirectory(OpenGL_Grid)
add_subdirectory(OpenGL_InstanceDrawing_Raw)
add_subdirectory(OpenGL_InstanceDrawing)
add_subdirectory(OpenGL_Framebuffer)
add_subdirectory(OpenGL_MultiTextures)
add_subdirectory(OpenGL_FB_Instanced)

